feat: Reworked theming system and moved variables back into components

--- a/ReadyCssWebsite/Pages/Colors.cshtml
+++ b/ReadyCssWebsite/Pages/Colors.cshtml
@@ -1,9 +1,16 @@
 @page
 
+@{
+    ViewData["Title"] = "Color and Theming System";
+}
+
 <h1>Colors</h1>
 <p>
-    Compared to common frameworks, Entropy only comes with a small color pallete by default and only includes a main
-    and an accent color. Most designs rarely use more than two colors. If you need a third color, you can add it yourself to fit your exact needs.
+    The color system is the heart of ReadyCSS. 
+</p>
+<p>
+    Compared to common frameworks, ReadyCSS only comes with a small color pallete by default and only includes a main
+    and an accent color. Most designs rarely use more than two colors. If you need a third color, you can add it yourself to fit your site's needs.
 </p>
 
 <div class="row">
