--- a/ReadyCssWebsite/Pages/Index.cshtml
+++ b/ReadyCssWebsite/Pages/Index.cshtml
@@ -76,11 +76,17 @@
     
 
 <div class="bg-main p-5">
-    <h1>Primary!</h1>
-    <p>This is a section with primary background</p>
+    <h1>Main!</h1>
+    <p>This is a section with main color background</p>
 </div>
 
 <div class="bg-accent p-5">
-    <h1>Success!</h1>
-    <p>This is a section with success background</p>
+    <h1>Accent!</h1>
+    <p>This is a section with accent color background</p>
+</div>
+
+<div class="bg-mg p-5">
+    <h1>Middleground!</h1>
+    <p>This is a section with middleground color background.</p>
+    <p>Useful for cards or other page sections</p>
 </div>
