--- a/scss/_sizes-h.scss
+++ b/scss/_sizes-h.scss
@@ -2,8 +2,9 @@
 // Header for sizing
 
 :root {
-    --spacer: 1rem;
+    --spacer: 0.8rem;
     --border-width: 2px;
+    --border-radius: 4px;
 }
 
 $sizer-percentages: (
