--- a/scss/elements/_input-check.scss
+++ b/scss/elements/_input-check.scss
@@ -39,7 +39,7 @@ input[type=checkbox].input-check {
   }
 
   &+label {
-    padding-left: var(--input-check-size);
+    padding-left: calc(var(--input-check-size) + 1ch);
     vertical-align: middle;
 
     cursor: pointer;
