--- a/scss/elements/_code.scss
+++ b/scss/elements/_code.scss
@@ -1,13 +1,20 @@
 @use "../typography-h" as *;
 @use "../sizes-h" as *;
-
-:root {
-    --code-padding: calc(var(--spacer) * 0.25);
-}
+@use "code-h" as *;
 
 code {    
+    --code-padding: calc(var(--spacer) * 0.25);
+    --code-bg: var(--scheme-middleground);
+    --code-color: var(--scheme-shade-1);
+    --code-border-color: var(--scheme-middleground);
+    --code-border-radius: var(--border-radius);
+    
     border: solid var(--border-width);
-    border-color: var(--scheme-shade);
+    border-color: var(--code-border-color);
+    border-radius: var(--code-border-radius);
+    
+    color: var(--code-color);
+    background-color: var(--code-bg);
     
     padding: var(--code-padding);
     display: inline-block;
@@ -19,13 +26,40 @@ code {
     
     pre > & {
         display: block;
+        position: relative;
         box-sizing: border-box;
         width: 100%;
         
-        padding:  calc(var(--spacer) / 2) var(--spacer);
+        padding:  calc(var(--spacer) * 0.75) calc(var(--spacer) * 1.25);
         border-left-width: calc(var(--border-width) * 4);
         word-break: normal;
         overflow-x: auto;
         
+        --code-bg: var(--scheme-shade-8);
+        --code-border-radius: 0;
+        
+        
+        // Code language overlay
+        
+        
+        @each $lang, $name in $code-languages {
+            &.#{$lang}::after {
+                content: $name;                
+            }
+        }
+        
+        &::after {
+            display: inline-block;
+            position: absolute;
+            top: 0;
+            right: 0;
+            padding: calc(var(--spacer) * 0.6);
+            
+            font-size: 0.9em;
+            font-weight: bold;
+            
+            background-color: var(--code-border-color);
+            color: var(--code-bg);
+        }
     }
 }
