--- a/ReadyCssWebsite/Pages/Index.cshtml
+++ b/ReadyCssWebsite/Pages/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Home page";
 }
 
-<h1 class="display-4 mb-0">Entropy CSS</h1>
+<h1 class="display-4 mb-0">ReadyCSS</h1>
 <p>My epic css framework</p>
 
 <hr/>
