--- a/ReadyCssWebsite/Pages/Shared/_Layout.cshtml
+++ b/ReadyCssWebsite/Pages/Shared/_Layout.cshtml
@@ -9,10 +9,8 @@
     
     <link rel="stylesheet" href="~/css/ready.css"/>
     <link rel="stylesheet" href="~/css/docs.css"/>
-    
-    <script src="https://kit.fontawesome.com/3c465cbf36.js" crossorigin="anonymous"></script>
 </head>
-<body class="theme-system docs-site">
+<body class="theme-dark docs-site">
 
 <header class="docs-navbar bg-shade">
     <ul class="container nav-list horizontal align-end">
@@ -44,9 +42,13 @@
     Footer
 </footer>
 
+<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+<script src="https://kit.fontawesome.com/3c465cbf36.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.4.0/highlight.min.js"></script>
+
 <script>hljs.initHighlightingOnLoad();</script>
 <script src="~/js/theming.js"></script>
+<script src="~/js/code-example.js"></script>
 
 </body>
 </html>
