--- a/ReadyCssWebsite/Pages/_ViewImports.cshtml
+++ b/ReadyCssWebsite/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using ChaosInitiative.Web.ChaoticDemo
-@namespace ChaosInitiative.Web.ChaoticDemo.Pages
+@namespace ReadyCssWebsite.Pages
+@addTagHelper *, ReadyCssWebsite
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
