--- a/ReadyCssWebsite/scss/_colors-h.scss
+++ b/ReadyCssWebsite/scss/_colors-h.scss
@@ -5,18 +5,18 @@
 // Header for colors. @use this in other files instead of _colors.scss!
 
 $colors: (
-        "main": #45DB2E,
-        "accent": #DB2EA6,
-        "shade-0": #101010,
-        "shade-1": #141414,
-        "shade-2": #202020,
-        "shade-3": #2a2a2a,
-        "shade-4": #373737,
-        "shade-5": #505050,
+        "main": #FFD369,
+        "accent": #F05454,
+        "shade-0": #0D1624,
+        "shade-1": #17202D,
+        "shade-2": #222831,
+        "shade-3": #333B46,
+        "shade-4": #434C5A,
+        "shade-5": #596270,
         "shade-6": #767676,
         "shade-7": #a0a0a0,
         "shade-8": #d0d0d0,
-        "shade-9": #ffffff
+        "shade-9": #fafafa
 );
 
 $palette: (
@@ -28,7 +28,7 @@ $palette: (
   $palette: map.set($palette, $color-name, var(--color-#{$color-name}));
 }
 
-@mixin theme-light() {
+@mixin color-scheme-light() {
   --scheme-background: var(--scheme-shade-9);
   --scheme-foreground: var(--scheme-shade-0);
   
@@ -36,13 +36,13 @@ $palette: (
   
   @each $color-name, $color-value in $colors {
     @if str-index($color-name, "shade") == 1 {
-      --scheme-#{$color-name}: #{$color-value};
+      --scheme-#{$color-name}: var(--color-#{$color-name});
     }
   }
 }
 
-@mixin theme-dark() {
-  --scheme-background: var(--scheme-shade-9);
+@mixin color-scheme-dark() {
+  --scheme-background: var(--scheme-shade-7);
   --scheme-foreground: var(--scheme-shade-0);
   
   --scheme-middleground: var(--scheme-shade-5);
@@ -51,7 +51,7 @@ $palette: (
     @if str-index($color-name, "shade") == 1 {
       // Invert shade colors
       $id: 9 - to-number(string.slice($color-name, -1));
-      --scheme-shade-#{$id}: #{$color-value};
+      --scheme-shade-#{$id}: var(--color-#{$color-name});
     }
   }
 }
