--- a/ReadyCssWebsite/scss/elements/_input-text.scss
+++ b/ReadyCssWebsite/scss/elements/_input-text.scss
@@ -2,7 +2,7 @@
 @use "../typography-h" as *;
 @use "../sizes-h" as *;
 
-input[type=text].input-text,
+.input-text,
 textarea.input-text {
     --input-text-padding: calc(var(--spacer) * 0.5);
     --input-text-border-width: var(--border-width);
@@ -53,7 +53,7 @@ textarea.input-text {
         content: attr(data-placeholder);
 
         font-size: var(--font-size);
-        color: var(--scheme-shade);
+        color: var(--scheme-shade-7);
         
         position: absolute;
         left: 0;
