Rewrite color system to the theme-palette-scheme system

--- a/_colors.scss
+++ b/_colors.scss
@@ -1,5 +1,8 @@
 @use "sass:map";
 @use "colors-h" as *;
+@use "themes/light" as lightTheme;
+@use "themes/dark" as darkTheme;
+@use "palettes/default" as defaultPalette;
 
 :root {
   @each $color-name, $color-value in $colors {
@@ -7,45 +10,22 @@
   }
 }
 
-@each $color-name, $color-value in $palette {
-  .bg-#{$color-name} {
-    background-color: $color-value;
-    $text-color: var(--scheme-background);
-    
-    @if $color-name == "bg" {
-      $text-color: var(--scheme-foreground);
-    }
-    color: $text-color;
-    
-    &::selection {
-      background-color: $text-color;
-      color: $color-value;
-    }    
-    
-    h1,h2,h3,h4,h5,h6 {
-      color: $text-color;
-    }
-  }
-  
-  .text-color-#{$color-name} {
-    color: $color-value;
-  }
+html,
+.palette-default {
+  @include defaultPalette.palette-default();
 }
 
 // ========================================== Theme ==========================================
 
-:root {
-  @include color-scheme-light();
-}
 body {
   background-color: var(--scheme-background);
   color: var(--scheme-foreground);
 }
 
 .theme-light {
-  @include color-scheme-light();
+  @include lightTheme.theme-light();
 }
 .theme-dark {
-  @include color-scheme-dark();
+  @include darkTheme.theme-dark();
 }
 
