Add shadow palette to default palette

--- a/themes/_dark.scss
+++ b/themes/_dark.scss
@@ -6,6 +6,7 @@
     --palette-default-foreground: var(--color-shade-0);
     
     --palette-default-middleground: var(--color-shade-5);
+    --palette-default-shadow: var(--color-shade-4);
 
     --palette-default-shade-0: var(--color-shade-9);
     --palette-default-shade-1: var(--color-shade-8);
