--- a/_typography.scss
+++ b/_typography.scss
@@ -1,5 +1,14 @@
-@use "typography-h" as *;
-@use "sizes-h" as *;
+
+:root {
+    --font-family-normal: sans-serif;
+    --font-family-monospace: monospace;
+    --font-size: 1.05rem;
+  
+    --heading-color: var(--scheme-foreground);
+    
+    --paragraph-width: 100%;
+  }
+  
 
 *, 
 *::before, 
