Update css variables of elements

--- a/elements/_buttons.scss
+++ b/elements/_buttons.scss
@@ -1,18 +1,21 @@
-.btn {
+:root {
     /* Color settings */
-    --btn-color: var(--scheme-middleground);
+    --btn-color: var(--scheme-foreground);
     --btn-text-color: var(--scheme-background);
+}
+
+.btn {
     --btn-bg: var(--btn-color);
 
     /* Size settings */
     --btn-border-width: var(--border-width);
     --btn-border-radius: var(--border-radius);
-    --btn-font-size: calc(var(--font-size) * 0.75);
+    --btn-font-size: calc(var(--font-size));
     --btn-outline-width: var(--btn-border-width);
     --btn-outline-offset: var(--btn-outline-width);
     --btn-padding-vertical: calc(var(--spacer) * 0.75);
     --btn-padding-horizontal: calc(var(--spacer) * 1.5);
-    
+
     /* Apply colors */
     background-color: var(--btn-bg);
     color: var(--btn-text-color);
