Update gray shades

--- a/_colors.scss
+++ b/_colors.scss
@@ -4,18 +4,18 @@
 @use "palettes/default" as defaultPalette;
 
 $colors: (
-        "main": #FFD369,
+        "main": #0f9fff,
         "accent": #F05454,
-        "shade-0": #0D1624,
-        "shade-1": #17202D,
-        "shade-2": #222831,
-        "shade-3": #333B46,
-        "shade-4": #434C5A,
+        "shade-0": #0b0e10,
+        "shade-1": #161c20,
+        "shade-2": #20292f,
+        "shade-3": #2b373f,
+        "shade-4": #36454f,
         "shade-5": #596270,
-        "shade-6": #767676,
-        "shade-7": #a0a0a0,
-        "shade-8": #d0d0d0,
-        "shade-9": #fafafa
+        "shade-6": #9d9d9d,
+        "shade-7": #efefef,
+        "shade-8": #f7f7f7,
+        "shade-9": #ffffff
 );
 
 
