--- a/palettes/_default.scss
+++ b/palettes/_default.scss
@@ -1,4 +1,5 @@
 @mixin palette-default() {
+    --scheme-main: var(--color-main);
     --scheme-background: var(--palette-default-background);
     --scheme-foreground: var(--palette-default-foreground);
     --scheme-middleground: var(--palette-default-middleground);
