Update grayscale color pallete

--- a/_colors.scss
+++ b/_colors.scss
@@ -12,7 +12,7 @@ $colors: (
         "shade-3": #2b373f,
         "shade-4": #36454f,
         "shade-5": #596270,
-        "shade-6": #9d9d9d,
+        "shade-6": #c9c9c9,
         "shade-7": #efefef,
         "shade-8": #f7f7f7,
         "shade-9": #ffffff
