--- a/elements/_code.scss
+++ b/elements/_code.scss
@@ -1,13 +1,11 @@
 
 code {    
-    --code-padding: calc(var(--spacer) * 0.25);
-    --code-bg: var(--scheme-middleground);
+    --code-bg: var(--scheme-shade-7);
+    --code-padding: calc(var(--spacer) * 0.25) calc(var(--spacer) * 0.5);
     --code-color: var(--scheme-shade-1);
-    --code-border-color: var(--scheme-middleground);
+    --code-border-color: var(--code-bg);
     --code-border-radius: var(--border-radius);
-    
-    border: solid var(--border-width);
-    border-color: var(--code-border-color);
+
     border-radius: var(--code-border-radius);
     
     color: var(--code-color);
@@ -18,21 +16,19 @@ code {
     
     // Jetbrains recommended settings for jetbrains mono font
     font-family: var(--font-family-monospace);
-    line-height: 1.2;
-    font-size: 16px;
-    
+    font-size: 0.9em;
+
     pre > & {
         display: block;
         position: relative;
         box-sizing: border-box;
         width: 100%;
-        
-        padding:  calc(var(--spacer) * 0.75) calc(var(--spacer) * 1.25);
+        line-height: 1.2;
+        font-size: 16px;
+
+        padding: var(--spacer);
         border-left-width: calc(var(--border-width) * 4);
         word-break: normal;
         overflow-x: auto;
-        
-        --code-bg: var(--scheme-shade-8);
-        --code-border-radius: 0;
     }
 }
